2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Documentation and tests for the `silent' option.
	* NEWS: Update.
	* doc/automake.texi (Invoking Automake): `silent' turns off some
	portability warnings.
	(Libtool Flags): `silent' silences libtool.
	(Options): Document the `silent' flag.
	* tests/dollarvar.test, tests/silent.test, tests/silent2.test,
	tests/silent3.test, tests/silent4.test, tests/silent5.test: New
	tests.
	* tests/Makefile.am: Update.
	* Makefile.am (maintainer-check): Ignore `DESTDIR' and `V' when
	checking for make variables that should not be overridden from
	the command line.

2009-03-07  Jan Engelhardt  <jengelh@medozas.de>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Implement `silent' build rules.
	* automake.in (ccer): New field in the language structure.
	Initialize it for all registered languages.
	(verbose_var, verbose_flag, verbose_dispatch)
	(silent_flag, define_verbose_var, define_verbose_tagvar)
	(define_verbose_libtool): New functions.
	(handle_languages, handle_programs, handle_libraries)
	(handle_ltlibraries, handle_configure)
	(define_compiler_variable, define_linker_variable)
	(define_per_target_linker_variable): Use them where appropriate
	to define variables to implement the silent output machinery.
	* lib/Automake/Options.pm (_process_option_list): Accept
	`silent', turning off `portability-recursive'.
	* lib/am/depend2.am: Add %VERBOSE% and %SILENT% prefixes where
	appropriate.
	* lib/am/lex.am: Likewise.
	* lib/am/library.am: Likewise.
	* lib/am/ltlibrary.am: Likewise.
	* lib/am/program.am: Likewise.
	* lib/am/yacc.am: Likewise.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Substitute, but do not define,
	AM_BACKSLASH.
	* tests/defs.in: Unset `V', to avoid influencing inner tests.

2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New channel `portability-recursive'.
	Add new channel for portability warnings about recursive make
	variable expansions `$(var1$(var2))'.  Enable it alongside
	`-Wportability'.