@@ -8039,6 +8039,7 @@ Flavors:
       --foreign          set strictness to foreign
       --gnits            set strictness to gnits
       --gnu              set strictness to gnu
+      --silent-rules     enable silent build rules
 
 Library files:
   -a, --add-missing      add missing standard files to package
@@ -8144,7 +8145,8 @@ sub parse_arguments ()
      'f|force-missing'  => \$force_missing,
      'o|output-dir=s'	=> \$output_directory,
      'a|add-missing'	=> \$add_missing,
-     'c|copy'	        => \$copy_missing,
+     'c|copy'		=> \$copy_missing,
+     'silent-rules'	=> sub { set_global_option ('silent', $cli_where); },
      'v|verbose'	=> sub { setup_channel 'verb', silent => 0; },
      'W|warnings=s'     => \&parse_warnings,
      # These long options (--Werror and --Wno-error) for backward
@@ -8188,6 +8190,10 @@ sub parse_arguments ()
       # In the next release we'll remove this entirely.
       $output_directory = '.';
     }
+
+  # Override portability-recursive warning.
+  process_global_option_list ($cli_where, 'silent')
+    if global_option 'silent';
 
   return unless @ARGV;
 
