@@ -2515,6 +2515,10 @@ Ordinarily each @file{Makefile.in} is created in the directory of the
 corresponding @file{Makefile.am}.  This option is deprecated and will be
 removed in a future release.
 
+@item --silent-rules
+@opindex --silent-rules
+Enable the @option{silent} option globally (@pxref{Options}).
+
 @item -v
 @itemx --verbose
 @opindex -v
