@@ -48,6 +48,15 @@ grep 'Makefile.am:7' stderr
 # On the other hand, if we allow `silent' mode, then we need to allow
 # recursive variable expansion, too.
 
+# This should work with the `--silent-rules' command line switch.
+AUTOMAKE_fails -Wportability --silent-rules
+grep 'Makefile.am:2' stderr
+grep 'Makefile.am:3' stderr
+grep 'Makefile.am:4' stderr
+grep 'Makefile.am:5' stderr
+grep 'Makefile.am:6' stderr && Exit 1
+grep 'Makefile.am:7' stderr && Exit 1
+
 # This should work with AUTOMAKE_OPTIONS.
 echo 'AUTOMAKE_OPTIONS = silent' >> Makefile.am
 
