@@ -113,6 +113,8 @@ New in 1.10a:
     This option requires the widely supported but non-POSIX `make' feature
     of recursive variable expansion, so do not use it if your package needs
     to build with `make' implementations that do not support it.
+    Besides the normal option setting methods, it can also be enabled
+    globally by the new automake option `--silent-rules'.
 
   - New prefix `notrans_' for manpages which should not be transformed
     by --program-transform.
