@@ -1,5 +1,17 @@
 2009-03-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	New automake command line option `--silent-rules'.
+	* automake.in (parse_arguments): Accept `--silent-rules; let it
+	override command line warning settings.
+	(usage): Document it.
+	* doc/automake.texi (Invoking Automake): Document it.
+	* NEWS: Update.
+	* tests/dollarvar.test: Also test `--silent-rules'.
+	* tests/pr300-ltlib.test: Use `$MAKE V=1' to enable verbose
+	output, which is matched later in the test.
+	* tests/silent6.test: New test.
+	* tests/Makefile.am: Update.
+
 	Documentation and tests for the `silent' option.
 	* NEWS: Update.
 	* doc/automake.texi (Invoking Automake): `silent' turns off some
